--- a/LibraryManagementSystem/Web.config
+++ b/LibraryManagementSystem/Web.config
@@ -17,9 +17,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
-    <authentication mode="Forms">
-      <forms loginUrl="/Login/GirisYap/"></forms>
-    </authentication>
+    <!--<authentication mode="Forms">
+      <forms loginUrl="/auth/login"></forms>
+    </authentication>-->
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
